// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdDqHD sc-gtcySc cBHwZt ddkfak"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdDqHD sc-gtcySc egIUhk ddkfak"
>
  foo
</button>
`;
